# modelite

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs
src/: handle.rs  lib.rs
src/model/: base.rs  mod.rs  sqlx.rs
src/query/: bulk.rs  mod.rs
tests/: integration_test.rs
