[package]
name = "modelite"
version = "0.1.0"
edition = "2024"
description = "Automatically generate create table and other SQLite queries for a struct"
repository = "https://github.com/jomy10/modelite"
license = "MIT"

[dependencies]
sqlx = { version = "0.8.6", features = ["sqlite"], optional = true }
modelite-macros = { path = "macro", version = "0.1.0" }

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]

[workspace]
resolver = "3"
members = [".", "macro"]
