[package]
name = "modelite"
version = "0.2.0"
edition = "2024"
description = "Automatically generate create table and other SQLite queries for a struct"
repository = "https://codeberg.org/Jomy10/modelite"
license = "MIT"

[dependencies]
sqlx = { version = "0.8.6", features = ["sqlite"], optional = true }
libsqlite3-sys = { version = "*", optional = true }
modelite-macros = { path = "macro", version = "0.2.0", optional = true, default-features = false }
futures-core = { version = "0.3.32", optional = true }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["rt"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

[features]
default = ["sqlx", "macro"]
sqlx = ["dep:sqlx", "dep:libsqlite3-sys", "dep:futures-core", "modelite-macros/sqlx"]
macro = ["dep:modelite-macros"]

[workspace]
resolver = "3"
members = [".", "macro"]
